<resources>
    <string name="app_name">Kolibri</string>
    <string name="action_settings">Settings</string>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>

    <!-- Login / Register -->
    <string name="username">Username</string>
    <string name="email">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="login_fail">Username or Password is wrong</string>

    <!-- User Search -->
    <string name="user_search_hint">Search…</string>
    <string name="user_search_chat_hint">Tap to chat</string>

    <!-- Error -->
    <string name="error">Error</string>
    <string name="error_no_internet">Check your internet connection</string>
    <string name="error_common">Something went wrong</string>

    <!-- Menu -->>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="help">Help</string>
    <string name="logout">Log out</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Open navigation close</string>

    <!-- Profile Fragment -->
    <string name="username_hint">Enter a username</string>
    <string name="email_hint">Enter a E-Mail address</string>
    <string name="old_password_hint">Enter old password</string>
    <string name="password_hint">Enter a new password</string>
    <string name="password_confirm_hint">Repeat the new password</string>
    <string name="sample_password">12345678909285</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat new Password</string>
    <string name="account_saved">Account Saved</string>
    <string name="are_you_sure_delete">Do you really want to delete your account?</string>
    <string name="unsaved_data">Unsaved changes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="new_chat_hint">You have no chats</string>
    <string name="connect_a_backend">Connect a backend</string>
    <string name="CONNECT">CONNECT</string>
    <string name="hostname_or_url">Hostname or Url</string>
    <string name="are_you_sure_disconnect">Are you sure you want to disconnect from the backend?</string>
    <string name="CONNECTED">CONNECTED</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_delete_chats">Do you really want to delete the selected chats and it\'s messages?</string>
    <string name="info">Info</string>
    <string name="version_prefix">"Version "</string>
    <string name="copyright">Copyright (c) 2019-2020 Leon Latsch</string>
    <string name="chat">Chat</string>
    <string name="settings_title_send_with_enter">Send with enter</string>
    <string name="settings_summary_send_with_enter">Send messages with enter</string>
    <string name="url_wiki">https://kolibri.leonlatsch.dev</string>
    <string name="settings_title_wiki">Wiki</string>
    <string name="settings_summary_wiki">Go to the Kolibri Wiki</string>
    <string name="licences_caps">LICENCES</string>
    <string name="url_third_party">https://raw.githubusercontent.com/leonlatsch/kolibri/master/THIRD_PARTY</string>
    <string name="settings_title_server">Server</string>
    <string name="settings_connected_to">Connected to</string>
    <string name="settings_source_code">Source Code</string>
    <string name="settings_source_code_summary">Search the Kolibri source code</string>
    <string name="url_github">https://github.com/leonlatsch/kolibri</string>
    <string name="user_search_placeholder">Search for users</string>
    <string name="user_search_no_results">No Search Results</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
