<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_title_server">
        <Preference
            android:key="olivia.backend.http.baseurl"
            android:title="@string/settings_connected_to"
            android:icon="@drawable/ic_cloud"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/chat">

        <SwitchPreferenceCompat
            android:key="olivia.app.send_with_enter"
            android:summary="@string/settings_summary_send_with_enter"
            android:title="@string/settings_title_send_with_enter"
            android:icon="@drawable/ic_keyboard_return"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help">

        <Preference
            android:summary="@string/settings_summary_wiki"
            android:title="@string/settings_title_wiki"
            android:icon="@drawable/ic_library_books">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_wiki" />
        </Preference>

        <Preference
            android:summary="@string/settings_source_code_summary"
            android:title="@string/settings_source_code"
            android:icon="@drawable/ic_code">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/url_github"/>
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>
