<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password" />

    <EditText
        android:id="@+id/password_old_password_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/old_password_hint"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password" />

    <EditText
        android:id="@+id/password_new_password_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_confirm" />

    <EditText
        android:id="@+id/password_confirm_password_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm_hint"
        android:inputType="textPassword" />
</LinearLayout>